2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Don't try to update config dialog when its window has been
	destroyed.  Fixes various crashes on Windows (from master).

	* Add a simple content properties dialog (#554).

2015-05-01  carl  <cth@carlh.net>

	* Don't load image files whose names start with ._ as they
	are probably OS X resource files (from master).

2015-04-30  Carl Hetherington  <cth@carlh.net>

	* Copy subtitle fonts to the DCP, and provide
	LiberationSans-Regular as a default Arial equivalent.

2015-04-29  Carl Hetherington  <cth@carlh.net>

	* Make disk space check take account of whether hard links
	are supported by the target filesystem (#511).

	* Allow configuration of the encryption key (from master).

	* Various fixes to bad timeline drag behaviour when
	snapping (from master).

2015-04-29  c.hetherington  <cth@carlh.net>

	* Hand-apply 291179175729b62e17a9c322cd27ae134d1310d9,
	8d92cce7d2885afa13ee4cb6f546dbf43942124b and
	c994839239e84a1f62865ed82fdc090900a66b03 from master;
	stop flickering when dragging in the timeline on OS X.

2015-04-22  c.hetherington  <cth@carlh.net>

	* Add P3 colour conversion preset.

	* Hand-apply all changes relating to colour specification
	as chromaticity.

2015-04-20  Carl Hetherington  <cth@carlh.net>

	* Hand-apply 47770097cf6a5d7dbbdded8977da5f3de53dfd33;
	single-file hashes.

	* Hand-apply e1d0d24146592e311d46781a1961fe080f6357cf;
	attempt to fix confusion with the JPEG2000 bandwidth
	control when a user enters a value directly rather than
	using the spin arrows.

2015-04-16  Carl Hetherington  <cth@carlh.net>

	* Fix potential OS X crashes due to another incarnation
	of the bizarre multi-thread stringstream bug.

2015-04-15  c.hetherington  <cth@carlh.net>

	* Hand-apply 94998e12d117f3f1781dfb1318939debfbf34546 from master;
	add option to restore the default configuration.

2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Hand-apply 69866d9ba972d21375081c313ac245535ac55be9 from master;